# np-prj-services

./: .ccls  .clang-format  .env.example  CMakeLists.txt  Dockerfile  Makefile  README.md  heroku.yml  pkgs
include/: bool.h  cmd.h  db.h  dotenv.h  error.h  jwt.h  snowflake.h  vec.h  ws.h
migrations/2022-01-07-071247_init-db/: down.sql  up.sql
migrations/2022-01-07-073008_insert-default/: down.sql  up.sql
migrations/2022-01-07-120120_unique-constraints/: down.sql  up.sql
migrations/2022-01-20-075146_file-versions/: down.sql  up.sql
src/: cmd.c  db.c  dotenv.c  error.c  jwt.c  main.c  snowflake.c  vec.c  ws-protocol.c  ws-protocol.h  ws.c
